--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,8 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+package-lock.json
+yarn-error.log
+package-lock.json
+package-lock.json
