--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@react-native-community/slider": "^4.5.6",
+    "@react-native-picker/picker": "^2.11.0",
     "react": "19.0.0",
     "react-native": "0.78.1",
+    "react-native-element-dropdown": "^2.12.4",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
