--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/slider": "^4.5.6",
-    "@tanstack/react-query": "^5.74.7",
     "@react-native-picker/picker": "^2.11.0",
+    "@tanstack/react-query": "^5.74.7",
+    "axios": "^1.9.0",
+    "jwt-decode": "^4.0.0",
     "react": "19.0.0",
     "react-native": "0.78.1",
     "react-native-element-dropdown": "^2.12.4",
