--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/slider": "^4.5.6",
     "@react-native-picker/picker": "^2.11.0",
+    "@react-navigation/native": "^7.1.6",
+    "@reduxjs/toolkit": "^2.7.0",
     "@tanstack/react-query": "^5.74.7",
     "axios": "^1.9.0",
     "jwt-decode": "^4.0.0",
@@ -20,7 +22,8 @@
     "react-native": "0.78.1",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
