--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@tanstack/react-query": "^5.74.7",
     "axios": "^1.9.0",
+    "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
+    "npm": "^11.3.0",
     "react": "19.0.0",
     "react-content-loader": "^7.0.2",
     "react-native": "0.78.1",
+    "react-native-cashfree-pg-sdk": "^2.2.2",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.4.0",
