--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
+    "react-native-star-rating-widget": "^1.9.2",
     "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
