--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/slider": "^4.5.6",
     "@react-native-picker/picker": "^2.11.0",
+    "@react-native-vector-icons/material-design-icons": "^12.0.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
@@ -28,6 +29,7 @@
     "react-native-cashfree-pg-sdk": "^2.2.2",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.14.3",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-star-rating-widget": "^1.9.2",
