--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-element-dropdown": "^2.12.4",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.14.3",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-star-rating-widget": "^1.9.2",
