Fixed name from capital case to normal

--- a/ios/starter/Info.plist
+++ b/ios/starter/Info.plist
@@ -14,7 +14,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>en</string>
 		<key>CFBundleDisplayName</key>
-		<string>ERACIT</string>
+		<string>Eracit</string>
 		<key>CFBundleExecutable</key>
 		<string>$(EXECUTABLE_NAME)</string>
 		<key>CFBundleIdentifier</key>
